# adk_runbooks

./: .gitignore  .gitmodules  CLAUDE.md  MCP_INTEGRATION_STATUS.md  Makefile  README.md  SETUP_CLAUDE.md  requirements-docs.txt
docs/: index.html  (+1 more)
multi-agent/: A2A_README.md  A2A_SOAR_INTEGRATION_STATUS.md  README.md  pyproject.toml  requirements.txt  start_a2a_system.sh  test_a2a_connection.py
multi-agent/agents/soc_manager_host/: __init__.py  agent.py
multi-agent/agents/soc_manager_simple/: __init__.py  agent.py
multi-agent/agents/soc_manager_traditional/: __init__.py  agent.py
multi-agent/manager/: .env.example  .env.sample  __init__.py  agent.py  agent_enhanced.py  host_agent.py  list_models.py  remote_agent_connection.py
multi-agent/manager/config/: README.md  config_loader.py  mcp_tools_config.yaml  tool_agent_mapping.yaml
multi-agent/manager/config/agents/: cti_researcher.yaml  detection_engineer.yaml  incident_responder.yaml  soar_specialist.yaml  soc_analyst_tier1.yaml  soc_analyst_tier2.yaml  soc_analyst_tier3.yaml  threat_hunter.yaml
multi-agent/manager/sub_agents/: response_format_instruction.py
multi-agent/manager/sub_agents/cti_researcher/: __init__.py  agent.py  agent_a2a.py  run_a2a.py  run_server.py
multi-agent/manager/tests/: TEST_PLAN.md  demo_delegation.py  run_tests.sh  test_config_system.py  validate_configs.py
multi-agent/manager/tools/: tools.py
multi-agent/manager/utils/: __init__.py  custom_adk_patches.py
multi-agent/reports/: Malware_IRP_Case_2483_Interim_Report  SOAR_Case_2955_Malware_Incident_Report_20250615_010034.md
(+307 files in other folders)
